@@ -1,3 +1,6 @@
+2016-12-08         [RELEASE] Release of youtube_privacy 1.1.0 (Nicole Cordes)
+2016-12-08 684fbdd [FEATURE] Add additional configuration as TypoScript properties (Nicole Cordes)
+
 2016-12-08         [RELEASE] Release of youtube_privacy 1.0.2 (Nicole Cordes)
 2016-12-08 9053363 [TASK] Rename extension key (Nicole Cordes)
 
